# Blak

./: .dockerfile  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.old  pyproject.toml  tox.ini
.github/workflows/: check-commit-msg.yaml  docker-publish.yaml  lint.yaml
client/: pyproject.toml
client/app/: __main__.py
client/app/lib/: kivy_manager.py
client/app/lib/kv_files/: client_ui.kv
client/app/ui/: __init__.py  extras.py
client/app/ui/kv_files/: chat_item.kv  chat_message.kv  chat_screen.kv  client_ui.kv  login.kv  title_bar.kv
client/app/utils/: __init__.py  icon-viewer.py  server.py
server/: .dockerfile  __main__.py  app.py  managers.py  pyproject.toml  user.py
server/server/: __main__.py  app.py  managers.py  user.py
