[tool.poetry]
name = "Blak"
version = "1.0.0"
description = "An uncompromising chat client made in python \nA chat client that has many features that help the user in getting a experience they never had before"
authors = ["p0lygun <solankivibhakar82@mail.com>"]  # todo: all team members add themselves
license = "MIT"
packages= [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "3.10.*"
Kivy = "^2.1.0"
websockets = "^10.3"
kivymd = {git = "https://github.com/kivymd/KivyMD.git"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"
black = "^22.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
"blak" = "app.__main__:main"
"blak.icon_chooser"= "app.utils.icon-viewer:main"
